temp_debug.txt
uv :   File "<string>", line 11
所在位置 行:1 字符: 1
+ uv run python -c "
+ ~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 11:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'{key}={val!r} sw={f._sw_name_to_category({key: val!r})!r}')
                                                    ^
SyntaxError: f-string: expecting '=', or '!', or ':', or '}'
